testdata/baselines/reference/compiler/tluaTableContextualTyping.errors.txt
tluaTableContextualTyping.tlua(7,33): error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: number; }'.
tluaTableContextualTyping.tlua(10,32): error TS2322: Type 'number' is not assignable to type 'string'.
tluaTableContextualTyping.tlua(19,20): error TS2322: Type 'number' is not assignable to type 'string'.


==== tluaTableContextualTyping.tlua (3 errors) ====
    // Contextual typing flows into `=` field initializers: `x` is inferred as
    // number.
    local ctx: { f: (x: number) => number } = { f = function(x) return x; end };
    local applied = ctx.f(1);
    
    // Excess property checking works through `=` fields.
    local excess: { a: number } = { b = 1 };
                                    ~
!!! error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: number; }'.
    
    // Assignability errors surface on the field.
    local wrong: { a: string } = { a = 1 };
                                   ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tluaTableContextualTyping.tlua:10:16: The expected type comes from property 'a' which is declared here on type '{ a: string; }'
    
    // Interface-typed tables.
    interface Box {
        value: string;
        size?: number;
    }
    local box: Box = { value = "v" };
    local sized: Box = { value = "v", size = 2 };
    local bad: Box = { value = 1 };
                       ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tluaTableContextualTyping.tlua:14:5: The expected type comes from property 'value' which is declared here on type 'Box'
    local boxes = {box, sized, bad};
    